# joaf-pdf

./: .editorconfig  Cargo.toml  README.md
crates/joaf-pdf-core/: Cargo.toml
crates/joaf-pdf-core/src/: error.rs  lib.rs  objects.rs  write.rs
crates/joaf-pdf-core/src/objects/: array.rs  dict.rs  id.rs  map.rs  mod.rs  name.rs  object.rs  stream.rs  string.rs  xref.rs
crates/joaf-pdf-dom/: Cargo.toml
crates/joaf-pdf-dom/src/: catalog.rs  document.rs  lib.rs  page.rs  trailer.rs
crates/joaf-pdf-parser/: Cargo.toml
crates/joaf-pdf-parser/src/: lexer.rs  lib.rs  parser.rs
crates/joaf-pdf-reader/: Cargo.toml
crates/joaf-pdf-reader/src/: lib.rs
crates/joaf-pdf-writer/: Cargo.toml
crates/joaf-pdf-writer/src/: lib.rs
src/: main.rs
