[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
authors = ["Sergio Garcia <joaf-pdf@sergiogarcia.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joaf-project/joaf-pdf"

[package]
name = "joaf-pdf"
version = "0.1.0"
edition = "2024"

[package.metadata]
authors = ["Sergio Garcia <joaf-pdf@sergiogarcia.dev>"]
keywords = []
categories = []
description = ""
readme = "README.md"
